# Open-String

./: .gitignore  Cargo.toml  README.md  build.rs
.docs/: open-string-requirements.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: dashboard.rs  gui.rs  health.rs  hotreload.rs  main.rs  prompt.rs  selfupdate.rs  skills.rs  tui.rs
src/agent/: aggregate.rs  bundled_extensions.rs  claude_executor.rs  confirmation.rs  conversation.rs  ctx_agent.rs  executor.rs  mcp_memory.rs  mcp_tools.rs  mediator.rs  mod.rs  progress.rs  respond.rs  result.rs  scope.rs  sub_agent.rs  system_prompt.rs  task.rs  tools.rs
src/auth/: api_key.rs  mod.rs
src/gateway/: discord.rs  line.rs  mod.rs  telegram.rs
src/gui/: index.html
src/llm/: client.rs  mod.rs
src/mcp/: bundled.rs  catalog.rs  client.rs  config.rs  lifecycle.rs  mod.rs  protocol.rs
src/permission/: audit_log.rs  danger.rs  file_store.rs  mod.rs  workspace_store.rs
src/session/: mod.rs  registry.rs  workspace.rs
