[package]
name = "open-string"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
keyring = "4"
notify = "6"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"

[dev-dependencies]
httpmock = "0.7"
